--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,25 @@
           {{ content }}
       </section>
       <footer>
-        <p>Project <a href="{{ site.github.url }}">{{ site.github.project_title }}</a> is maintained by <a href="{{ site.github.owner_url }}">@{{ site.github.owner_name }}</a></p>
+
+        <div class=badges>
+            <img title="Stable Version" src="https://poser.pugx.org/gpupo/{{ site.github.project_title }}/v/stable">
+            <img title="Total de downloads" src="https://poser.pugx.org/gpupo/{{ site.github.project_title }}/downloads">
+            <img title="License" src="https://poser.pugx.org/gpupo/{{ site.github.project_title }}/license">
+        </div>
+
+        <ul class=coverage>
+          <li class="button"><a href="coverage/">Coverage</a></li>
+          <li class="button"><a href="coverage/testdox.html">Testdox</a></li>
+        </ul>
+
+        <p>
+          <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=EK6F2WRKG7GNN&amp;item_name={{ site.github.project_title }}">
+            <img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" alt="Paypal Donations">
+          </a>
+        </p>
+
+        <p>Project <a href="{{ site.github.url }}">{{ site.github.project_title }}</a> is created by <a href="{{ site.github.owner_url }}">@{{ site.github.owner_name }}</a></p>
         <p><small>Hosted on GitHub Pages</p>
         <p><small> Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
